# Cantara

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package-lock.json  package.json
.github/workflows/: dioxus.yml
assets/: main.css  pdf_render_inline.js  pdf_renderer.js  positioning.js  presentation.css  presentation_positioning.js  presenter_console.css
locales/: app.yml  wizard.yml
src/: main.rs  presentation_components.rs  selection.rs  selection_components.rs  settings.rs  settings_components.rs  settingspage.rs  shared_components.rs  slide_rendering.rs  sourcefiles.rs  states.rs  wizard.rs  wizard_components.rs
src/components/: directory_browser.rs  font_settings.rs  mod.rs  presentation_components.rs  presentation_design_settings_components.rs  presenter_console_components.rs  selection_components.rs  settings_components.rs  shared_components.rs  song_slide_settings_components.rs  wizard_components.rs
src/logic/: bundled_repos.rs  conversions.rs  css.rs  mod.rs  presentation.rs  screens.rs  search.rs  settings.rs  sourcefiles.rs  states.rs  sync.rs
testfiles/: TestMarkdown.md  example.md
