[package]
name = "cantara"
version = "0.3.0"
authors = ["Jan Martin Reckel <jm.reckel@t-online.de>"]
keywords = ["music", "sheets", "presentation"]
license-file = "COPYING"
description = "Software for Song Presentation in Churches"
edition = "2024"
repository = "https://github.com/CantaraProject/Cantara"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router"] }
dirs = "6.0.0"

dioxus-free-icons = { version = "0.10.0", features = [
    "font-awesome-regular",
    "font-awesome-solid",
] }

rust-i18n = "3.1.5"
serde = "1.0.228"
serde_json = "1.0.145"
sys-locale = "=0.3.2"

# Cantara libraries
cantara-songlib = "0.1.5"
rgb = { version = "0.8.52", features = ["serde"] }
log = "0.4.28"
# reqwest without default TLS on all targets; TLS and blocking added for non-WASM below
# On WASM, the browser's native fetch API handles HTTP/TLS natively
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
zip = "8.1.0"

# Non-Linux desktop dependencies (macOS, Windows, etc. – excluded from Android, iOS, and web/WASM)
[target.'cfg(not(any(target_os = "linux", target_os = "android", target_os = "ios", target_arch = "wasm32")))'.dependencies]
rfd = { version = "0.15.4", default-features = false, features = ["tokio"] }
dark-light = "1.1"
lopdf = "0.39.0"
base64 = "0.22.1"

# Linux desktop dependencies (same libraries, with xdg-portal support for rfd)
[target.'cfg(all(target_os = "linux", not(target_arch = "wasm32")))'.dependencies]
rfd = { version = "0.15.4", default-features = false, features = ["tokio", "xdg-portal"] }
dark-light = "1.1"
lopdf = "0.39.0"
base64 = "0.22.1"

# Non-WASM dependencies (blocking HTTP client, TLS, and filesystem helpers not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "default-tls"] }
tempfile = "3.23"

# Web (WASM) specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
lopdf = { version = "0.39.0", default-features = false }
base64 = "0.22.1"
# getrandom needs wasm_js feature to use browser's crypto API on WASM
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_0_4 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = [
    "dioxus/desktop",
]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
