[package]
name = "cantara"
version = "0.3.0"
authors = ["Jan Martin Reckel <jm.reckel@t-online.de>"]
keywords = ["music", "sheets", "presentation"]
license-file = "COPYING"
description = "Software for Song Presentation in Churches"
edition = "2024"
repository = "https://github.com/CantaraProject/Cantara"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router"] }
dirs = "6.0.0"

dioxus-free-icons = { version = "0.10.0", features = [
    "font-awesome-regular",
    "font-awesome-solid",
] }

rust-i18n = "3.1.5"
serde = "1.0.228"
serde_json = "1.0.145"
sys-locale = "=0.3.2"

# Cantara libraries
cantara-songlib = "0.1.5"
markdown = "1.0.0"
rgb = { version = "0.8.52", features = ["serde"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
log = "0.4.28"
# reqwest without default TLS on all targets; TLS and blocking added for non-WASM below
# On WASM, the browser's native fetch API handles HTTP/TLS natively
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
zip = "8.1.0"
regex = "1.12.3"
md5 = "0.8.0"

# Non-Linux desktop dependencies (macOS, Windows, etc. – excluded from Android, iOS, and web/WASM)
[target.'cfg(not(any(target_os = "linux", target_os = "android", target_os = "ios", target_arch = "wasm32")))'.dependencies]
rfd = { version = "0.15.4", default-features = false, features = ["tokio"] }
dark-light = "1.1"
lopdf = "0.39.0"
base64 = "0.22.1"

# Linux desktop dependencies (same libraries, with xdg-portal support for rfd)
[target.'cfg(all(target_os = "linux", not(target_arch = "wasm32")))'.dependencies]
rfd = { version = "0.15.4", default-features = false, features = ["tokio", "xdg-portal"] }
dark-light = "1.1"
lopdf = "0.39.0"
base64 = "0.22.1"

# Non-WASM dependencies (blocking HTTP client, TLS, and filesystem helpers not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "default-tls"] }
tempfile = "3.23"

# Mobile (Android, iOS) dependencies: PDF, encoding, and TLS libraries
#
# reqwest's `default-tls` feature enables `rustls-platform-verifier`, which on Android
# performs certificate verification via JNI through a Java helper class
# (`rustls-platform-verifier-android`). Dioxus-built APKs don't bundle this class,
# so the JNI class-load fails with a fatal SIGABRT on any HTTPS request.
#
# Certificate verification uses embedded Mozilla root certificates (webpki-root-certs)
# via `use_preconfigured_tls()` instead of the platform verifier.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
lopdf = "0.39.0"
base64 = "0.22.1"
rustls = { version = "0.23", default-features = false, features = ["std"] }
webpki-root-certs = "1.0"

# Android-specific dependencies: JNI for accessing the app's internal data directory
# (needed because the `dirs` crate cannot resolve paths without HOME/XDG env vars on Android)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

# Web (WASM) specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage", "Location"] }
lopdf = { version = "0.39.0", default-features = false }
base64 = "0.22.1"
# getrandom needs wasm_js feature to use browser's crypto API on WASM
# Both v0.3 and v0.4 are needed because transitive deps use different major versions:
# lopdf -> rand -> rand_core -> getrandom 0.3, zip -> getrandom 0.4
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_0_4 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = [
    "dioxus/desktop",
    "dep:image",
]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
